Update 2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb

--- a/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
+++ b/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
@@ -2542,13 +2542,14 @@
     }
    ],
    "source": [
+    "# Dropping the \"UNIT\" column because its description has been added to the \"Statistic Label\" column\n",
     "irish_cer = irish_cer.drop(columns=[\"UNIT\"])\n",
     "irish_cer"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6cd23fba",
+   "id": "ea5a6770",
    "metadata": {},
    "source": [
     "### STEP 3: Loading & Exploring Data on Cereal Crops Worldwide in Comparison to Ireland(source: World Bank)"
@@ -2556,7 +2557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d5f47bb",
+   "id": "ce37ed7a",
    "metadata": {},
    "source": [
     "#### DATA SET 1: Cereal Production in Metric Tonnes\n",
@@ -2567,7 +2568,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "57d14ee4",
+   "id": "c7fbdc64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2578,7 +2579,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "de40ee9e",
+   "id": "50d5fb08",
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8a81437d",
+   "id": "99ec0d91",
    "metadata": {
     "scrolled": true
    },
@@ -3016,7 +3017,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "af9f0590",
+   "id": "309ff3f8",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3109,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9f178fd5",
+   "id": "ab2171ac",
    "metadata": {},
    "outputs": [
     {
@@ -3482,7 +3483,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7f9e4457",
+   "id": "1219a884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3500,7 +3501,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ac46b15a",
+   "id": "6ca3d810",
    "metadata": {},
    "outputs": [
     {
@@ -3900,7 +3901,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2b7c03ee",
+   "id": "17812c9d",
    "metadata": {
     "scrolled": true
    },
@@ -3935,7 +3936,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cb2c1a62",
+   "id": "94c8d72c",
    "metadata": {},
    "outputs": [
     {
@@ -4334,8 +4335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "cb3b4654",
+   "execution_count": 25,
+   "id": "49149371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4346,8 +4347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9d54f33c",
+   "execution_count": 26,
+   "id": "4e0b0943",
    "metadata": {},
    "outputs": [
     {
@@ -4940,7 +4941,7 @@
        "49  Cereal production (metric tons)  AG.PRD.CREL.MT  1961     316977.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4952,7 +4953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69cb959",
+   "id": "1bd114d0",
    "metadata": {},
    "outputs": [],
    "source": []
