Update 2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb

--- a/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
+++ b/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f504967",
+   "id": "947f6ae3",
    "metadata": {},
    "source": [
     "### STEP 3: Loading & Exploring Data on Cereal Crops Worldwide in Comparison to Ireland(source: World Bank)"
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53474648",
+   "id": "3cb7356e",
    "metadata": {},
    "source": [
     "#### DATA SET 1: Cereal Production in Metric Tonnes\n",
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "09da07cd",
+   "id": "b8e9cccf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0ee9e375",
+   "id": "768ff738",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9552273d",
+   "id": "3f14def8",
    "metadata": {
     "scrolled": true
    },
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d577de3e",
+   "id": "8fb6d9e6",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d18f4ade",
+   "id": "99158e66",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "20d7cf5d",
+   "id": "336022db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "096887ef",
+   "id": "7856aff5",
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f362b947",
+   "id": "21e2166e",
    "metadata": {
     "scrolled": true
    },
@@ -2001,7 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f4873d56",
+   "id": "c07aa45f",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a34a294e",
+   "id": "59ab979f",
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2253,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7a0e5588",
+   "id": "551b1f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fd6402a1",
+   "id": "f0c79ba1",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2378,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c0192f4e",
+   "id": "f535787e",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b80a3bf9",
+   "id": "315edf4b",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d755fabd",
+   "id": "a96382aa",
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49eb2cc4",
+   "id": "da6c6259",
    "metadata": {},
    "source": [
     "#### DATA SET 2: Cereal Yields Per Hectare\n",
@@ -2632,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f4d6484f",
+   "id": "87fd2dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c752e6b2",
+   "id": "9fcbb33c",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d86e0ee2",
+   "id": "9131273b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2879,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cfa432ed",
+   "id": "1df44bc9",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "33f335f1",
+   "id": "3f4ad984",
    "metadata": {},
    "outputs": [
     {
@@ -3324,7 +3324,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b6e8ac1a",
+   "id": "869b10b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3338,7 +3338,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f1f47fff",
+   "id": "e1c6b6f5",
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a330e5d5",
+   "id": "75317992",
    "metadata": {
     "scrolled": true
    },
@@ -3464,7 +3464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1acaa9",
+   "id": "9c4723d2",
    "metadata": {},
    "source": [
     "#### DATA SET 3: Land Under Cereal Production\n",
@@ -3475,7 +3475,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "561d52ac",
+   "id": "98010c64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6b2ad2f0",
+   "id": "074cbf7b",
    "metadata": {},
    "outputs": [
     {
@@ -3711,7 +3711,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ab47dcf1",
+   "id": "082ac31f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3729,7 +3729,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9629d87a",
+   "id": "629aee5f",
    "metadata": {},
    "outputs": [
     {
@@ -3955,7 +3955,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "eda3a7de",
+   "id": "31c3ee68",
    "metadata": {},
    "outputs": [
     {
@@ -4181,7 +4181,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e8497305",
+   "id": "3b440619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4195,7 +4195,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0539b1dd",
+   "id": "863d8148",
    "metadata": {},
    "outputs": [
     {
@@ -4290,7 +4290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9ce2c08d",
+   "id": "f751953b",
    "metadata": {},
    "outputs": [
     {
@@ -4318,9 +4318,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fd4bd02",
+   "metadata": {},
+   "source": [
+    "### Merging Data Set 1, Data Set 2 & Data Set 3 to one Data set(World Data on Arable Production of Cereals)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b976803",
+   "id": "a44321d7",
    "metadata": {},
    "outputs": [],
    "source": []
