--- a/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
+++ b/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947f6ae3",
+   "id": "38fb6e12",
    "metadata": {},
    "source": [
     "### STEP 3: Loading & Exploring Data on Cereal Crops Worldwide in Comparison to Ireland(source: World Bank)"
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cb7356e",
+   "id": "3704d9bb",
    "metadata": {},
    "source": [
     "#### DATA SET 1: Cereal Production in Metric Tonnes\n",
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b8e9cccf",
+   "id": "44847fec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "768ff738",
+   "id": "d61000e3",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3f14def8",
+   "id": "26859f4e",
    "metadata": {
     "scrolled": true
    },
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8fb6d9e6",
+   "id": "8bb55d12",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "99158e66",
+   "id": "334585cd",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "336022db",
+   "id": "6031962a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7856aff5",
+   "id": "0ac525a5",
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "21e2166e",
+   "id": "df5e71e3",
    "metadata": {
     "scrolled": true
    },
@@ -2001,7 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c07aa45f",
+   "id": "6665e353",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "59ab979f",
+   "id": "492fbaff",
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2253,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "551b1f2f",
+   "id": "c3c13b3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f0c79ba1",
+   "id": "3e0bde40",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2378,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f535787e",
+   "id": "b26ed174",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "315edf4b",
+   "id": "14649a11",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a96382aa",
+   "id": "7c0e8f53",
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da6c6259",
+   "id": "b161d5f6",
    "metadata": {},
    "source": [
     "#### DATA SET 2: Cereal Yields Per Hectare\n",
@@ -2632,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "87fd2dea",
+   "id": "72000507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9fcbb33c",
+   "id": "4a81fdb0",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9131273b",
+   "id": "af45e239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2879,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1df44bc9",
+   "id": "b493b3e1",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3f4ad984",
+   "id": "b376fc76",
    "metadata": {},
    "outputs": [
     {
@@ -3324,7 +3324,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "869b10b8",
+   "id": "68ffdaa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3338,7 +3338,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e1c6b6f5",
+   "id": "fc3ce486",
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "75317992",
+   "id": "fd55cd7b",
    "metadata": {
     "scrolled": true
    },
@@ -3464,7 +3464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4723d2",
+   "id": "e7bae27e",
    "metadata": {},
    "source": [
     "#### DATA SET 3: Land Under Cereal Production\n",
@@ -3475,7 +3475,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "98010c64",
+   "id": "7159468f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "074cbf7b",
+   "id": "8b736fe0",
    "metadata": {},
    "outputs": [
     {
@@ -3711,7 +3711,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "082ac31f",
+   "id": "f3c18ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3729,7 +3729,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "629aee5f",
+   "id": "1cac3635",
    "metadata": {},
    "outputs": [
     {
@@ -3955,7 +3955,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "31c3ee68",
+   "id": "a55aff80",
    "metadata": {},
    "outputs": [
     {
@@ -4181,7 +4181,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3b440619",
+   "id": "27f0fcb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4195,7 +4195,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "863d8148",
+   "id": "007b481c",
    "metadata": {},
    "outputs": [
     {
@@ -4290,7 +4290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f751953b",
+   "id": "63e648a8",
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd4bd02",
+   "id": "33145558",
    "metadata": {},
    "source": [
     "### Merging Data Set 1, Data Set 2 & Data Set 3 to one Data set(World Data on Arable Production of Cereals)"
@@ -4327,8 +4327,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "4a6bb943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the columns \"CerealYield(Kg per ha)\",\"LandUnderCereal(ha)\" from df_yieldkg & df_landha to df_prodmt\n",
+    "df_prodmt[\"CerealYield(Kg per ha)\"] = df_yieldkg[\"CerealYield(Kg per ha)\"]\n",
+    "df_prodmt[\"LandUnderCereal(ha)\"] = df_landha[\"LandUnderCereal(ha)\"]\n",
+    "\n",
+    "# Saving the resulting data set to a new CSV file\n",
+    "df_prodmt.to_csv(\"arable-production-of-cereal-crops\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4ad1d5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>CerealProduction(metric tons)</th>\n",
+       "      <th>CerealYield(Kg per ha)</th>\n",
+       "      <th>LandUnderCereal(ha)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "      <td>AFE</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>17059517.0</td>\n",
+       "      <td>997.345265</td>\n",
+       "      <td>17104771.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>3695000.0</td>\n",
+       "      <td>1115.100000</td>\n",
+       "      <td>3313500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Africa Western and Central</td>\n",
+       "      <td>AFW</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>15199359.0</td>\n",
+       "      <td>675.354815</td>\n",
+       "      <td>22506121.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>544000.0</td>\n",
+       "      <td>828.000000</td>\n",
+       "      <td>657000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15955</th>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td>XKX</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15956</th>\n",
+       "      <td>Yemen, Rep.</td>\n",
+       "      <td>YEM</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>447496.0</td>\n",
+       "      <td>833.900000</td>\n",
+       "      <td>536626.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15957</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>ZAF</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>18237226.0</td>\n",
+       "      <td>5407.200000</td>\n",
+       "      <td>3372793.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15958</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>ZMB</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3685484.0</td>\n",
+       "      <td>2479.600000</td>\n",
+       "      <td>1486294.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15959</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1598038.0</td>\n",
+       "      <td>1075.200000</td>\n",
+       "      <td>1486227.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15960 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Country Name Country Code  Date  \\\n",
+       "0                            Aruba          ABW  1961   \n",
+       "1      Africa Eastern and Southern          AFE  1961   \n",
+       "2                      Afghanistan          AFG  1961   \n",
+       "3       Africa Western and Central          AFW  1961   \n",
+       "4                           Angola          AGO  1961   \n",
+       "...                            ...          ...   ...   \n",
+       "15955                       Kosovo          XKX  2020   \n",
+       "15956                  Yemen, Rep.          YEM  2020   \n",
+       "15957                 South Africa          ZAF  2020   \n",
+       "15958                       Zambia          ZMB  2020   \n",
+       "15959                     Zimbabwe          ZWE  2020   \n",
+       "\n",
+       "       CerealProduction(metric tons)  CerealYield(Kg per ha)  \\\n",
+       "0                                0.0                0.000000   \n",
+       "1                         17059517.0              997.345265   \n",
+       "2                          3695000.0             1115.100000   \n",
+       "3                         15199359.0              675.354815   \n",
+       "4                           544000.0              828.000000   \n",
+       "...                              ...                     ...   \n",
+       "15955                            0.0                0.000000   \n",
+       "15956                       447496.0              833.900000   \n",
+       "15957                     18237226.0             5407.200000   \n",
+       "15958                      3685484.0             2479.600000   \n",
+       "15959                      1598038.0             1075.200000   \n",
+       "\n",
+       "       LandUnderCereal(ha)  \n",
+       "0                      0.0  \n",
+       "1               17104771.0  \n",
+       "2                3313500.0  \n",
+       "3               22506121.0  \n",
+       "4                 657000.0  \n",
+       "...                    ...  \n",
+       "15955                  0.0  \n",
+       "15956             536626.0  \n",
+       "15957            3372793.0  \n",
+       "15958            1486294.0  \n",
+       "15959            1486227.0  \n",
+       "\n",
+       "[15960 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_arable = df_prodmt\n",
+    "df_arable"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a44321d7",
+   "id": "9eb2484e",
    "metadata": {},
    "outputs": [],
    "source": []
