Update 2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb

--- a/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
+++ b/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
@@ -48,7 +48,19 @@
    "id": "ac151c07",
    "metadata": {},
    "source": [
-    "### STEP 2: Loading & Exploring Data on Cereal Crops in Ireland(source: Central Statistics Office)"
+    "### STEP 2: Loading & Exploring Data on Cereal Crops in Ireland(source: Central Statistics Office)\n",
+    "\n",
+    "* Loading Data\n",
+    "* Cleaning and enriching Data\n",
+    "* Graphical Representation of the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5976cf",
+   "metadata": {},
+   "source": [
+    "#### (i.) Loading Data"
    ]
   },
   {
@@ -341,6 +353,14 @@
     "df = df_cereals\n",
     "counts = count_values(df, 'Statistic Label')\n",
     "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "861dbb98",
+   "metadata": {},
+   "source": [
+    "#### (ii.) Cleaning and enriching Data"
    ]
   },
   {
@@ -835,7 +855,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "187b2ed2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -957,7 +979,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38fb6e12",
+   "id": "29a25592",
+   "metadata": {},
+   "source": [
+    "#### (iii.) Graphical Representation of the Data\n",
+    "\n",
+    "* Bar Graph; Bar charts are one of the most common data visualizations. You can use them to quickly compare data across categories, highlight differences, show trends and outliers, and reveal historical highs and lows at a glance.\n",
+    "* Line Chart; The line chart, or line graph, connects several distinct data points, presenting them as one continuous evolution. Use line charts to view trends in data, usually over time\n",
+    "* Scatter Plot; Scatter plots are an effective way to investigate the relationship between different variables, showing if one variable is a good predictor of another, or if they tend to change independently. A scatter plot presents lots of distinct data points on a single chart.\n",
+    "* https://www.tableau.com/learn/whitepapers/which-chart-or-graph-is-right-for-you"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6100e4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba359f53",
    "metadata": {},
    "source": [
     "### STEP 3: Loading & Exploring Data on Cereal Crops Worldwide in Comparison to Ireland(source: World Bank)"
@@ -965,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3704d9bb",
+   "id": "1352ec62",
    "metadata": {},
    "source": [
     "#### DATA SET 1: Cereal Production in Metric Tonnes\n",
@@ -976,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "44847fec",
+   "id": "90a64931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d61000e3",
+   "id": "11314fae",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "26859f4e",
+   "id": "7e57420e",
    "metadata": {
     "scrolled": true
    },
@@ -1425,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8bb55d12",
+   "id": "562db12d",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "334585cd",
+   "id": "11ee57f8",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6031962a",
+   "id": "0c8f5a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0ac525a5",
+   "id": "37c25e78",
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "df5e71e3",
+   "id": "1db8523c",
    "metadata": {
     "scrolled": true
    },
@@ -2001,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6665e353",
+   "id": "c4da6174",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "492fbaff",
+   "id": "dfb4a6ac",
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c3c13b3a",
+   "id": "3a1a4a96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3e0bde40",
+   "id": "e9df806e",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b26ed174",
+   "id": "b3150754",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2533,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "14649a11",
+   "id": "bacede16",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2635,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7c0e8f53",
+   "id": "b38772c6",
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b161d5f6",
+   "id": "6409627a",
    "metadata": {},
    "source": [
     "#### DATA SET 2: Cereal Yields Per Hectare\n",
@@ -2632,7 +2675,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "72000507",
+   "id": "c351ad1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2686,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4a81fdb0",
+   "id": "a0094f73",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "af45e239",
+   "id": "a9082c6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2879,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b493b3e1",
+   "id": "8893d3d9",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3141,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b376fc76",
+   "id": "30c6b9cd",
    "metadata": {},
    "outputs": [
     {
@@ -3324,7 +3367,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "68ffdaa9",
+   "id": "fa4c3526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3338,7 +3381,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fc3ce486",
+   "id": "1bfb9372",
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3476,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fd55cd7b",
+   "id": "e90e5ff5",
    "metadata": {
     "scrolled": true
    },
@@ -3464,7 +3507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bae27e",
+   "id": "3adde7c2",
    "metadata": {},
    "source": [
     "#### DATA SET 3: Land Under Cereal Production\n",
@@ -3475,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7159468f",
+   "id": "5ed14b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3486,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8b736fe0",
+   "id": "70b319c4",
    "metadata": {},
    "outputs": [
     {
@@ -3711,7 +3754,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f3c18ea9",
+   "id": "6ab1b685",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3729,7 +3772,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1cac3635",
+   "id": "d437b8bf",
    "metadata": {},
    "outputs": [
     {
@@ -3955,7 +3998,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a55aff80",
+   "id": "24ed2e18",
    "metadata": {},
    "outputs": [
     {
@@ -4181,7 +4224,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "27f0fcb6",
+   "id": "8f1a98a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4195,7 +4238,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "007b481c",
+   "id": "2e12e184",
    "metadata": {},
    "outputs": [
     {
@@ -4290,7 +4333,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "63e648a8",
+   "id": "802638aa",
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33145558",
+   "id": "b69d9647",
    "metadata": {},
    "source": [
     "### Merging Data Set 1, Data Set 2 & Data Set 3 to one Data set(World Data on Arable Production of Cereals)"
@@ -4328,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4a6bb943",
+   "id": "fa42045f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4342,8 +4385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "4ad1d5b9",
+   "execution_count": 48,
+   "id": "f541d2fe",
    "metadata": {},
    "outputs": [
     {
@@ -4523,7 +4566,7 @@
        "[15960 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4536,7 +4579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb2484e",
+   "id": "2ed09c46",
    "metadata": {},
    "outputs": [],
    "source": []
