Update 2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb

--- a/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
+++ b/2022550_Brian Sudi Wafula, Msc Data Analytics.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5976cf",
+   "id": "e1ba9a9f",
    "metadata": {},
    "source": [
     "#### (i.) Loading Data"
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861dbb98",
+   "id": "685b79b8",
    "metadata": {},
    "source": [
     "#### (ii.) Cleaning and enriching Data"
@@ -979,28 +979,79 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a25592",
+   "id": "0f8c04db",
    "metadata": {},
    "source": [
     "#### (iii.) Graphical Representation of the Data\n",
     "\n",
     "* Bar Graph; Bar charts are one of the most common data visualizations. You can use them to quickly compare data across categories, highlight differences, show trends and outliers, and reveal historical highs and lows at a glance.\n",
     "* Line Chart; The line chart, or line graph, connects several distinct data points, presenting them as one continuous evolution. Use line charts to view trends in data, usually over time\n",
-    "* Scatter Plot; Scatter plots are an effective way to investigate the relationship between different variables, showing if one variable is a good predictor of another, or if they tend to change independently. A scatter plot presents lots of distinct data points on a single chart.\n",
-    "* https://www.tableau.com/learn/whitepapers/which-chart-or-graph-is-right-for-you"
+    "* Heatmap; Heat Map Chart, or Heatmap is a two-dimensional visual representation of data, where values are encoded in colors, delivering a convenient, insightful view of information\n",
+    "* Bubble Chart; Bubble charts are super useful types of graphs for making a comparison of the relationships between data in 3 numeric-data dimensions\n",
+    "* https://www.tableau.com/learn/whitepapers/which-chart-or-graph-is-right-for-you\n",
+    "* https://www.intellspot.com/types-graphs-charts/\n",
+    "* https://www.anychart.com/chartopedia/chart-type/heatmap/#:~:text=Heat%20Map%20Chart%2C%20or%20Heatmap,denoting%20different%20sets%20of%20categories."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6100e4d",
+   "id": "9160bd18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00dbae0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec80c3a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf1ab6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b608f628",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f515d8b8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ba359f53",
+   "id": "1d422fd7",
+   "metadata": {},
+   "source": [
+    "#### Bubble Chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b84b1f",
    "metadata": {},
    "source": [
     "### STEP 3: Loading & Exploring Data on Cereal Crops Worldwide in Comparison to Ireland(source: World Bank)"
@@ -1008,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1352ec62",
+   "id": "f6f1f56e",
    "metadata": {},
    "source": [
     "#### DATA SET 1: Cereal Production in Metric Tonnes\n",
@@ -1019,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "90a64931",
+   "id": "39676e79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "11314fae",
+   "id": "6c052e16",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7e57420e",
+   "id": "6d96a273",
    "metadata": {
     "scrolled": true
    },
@@ -1468,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "562db12d",
+   "id": "ec3abcbc",
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "11ee57f8",
+   "id": "a71a00e1",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0c8f5a6c",
+   "id": "dd74ef84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "37c25e78",
+   "id": "7756b3da",
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1db8523c",
+   "id": "199a1ff4",
    "metadata": {
     "scrolled": true
    },
@@ -2044,7 +2095,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c4da6174",
+   "id": "2e51ce79",
    "metadata": {},
    "outputs": [
     {
@@ -2077,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dfb4a6ac",
+   "id": "999e85a3",
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3a1a4a96",
+   "id": "36a14a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e9df806e",
+   "id": "f4ca9497",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b3150754",
+   "id": "47336e47",
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2584,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bacede16",
+   "id": "66437a97",
    "metadata": {},
    "outputs": [
     {
@@ -2635,7 +2686,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b38772c6",
+   "id": "ca432238",
    "metadata": {},
    "outputs": [
     {
@@ -2664,7 +2715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6409627a",
+   "id": "88198086",
    "metadata": {},
    "source": [
     "#### DATA SET 2: Cereal Yields Per Hectare\n",
@@ -2675,7 +2726,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c351ad1d",
+   "id": "6a75be44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2686,7 +2737,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a0094f73",
+   "id": "918515b4",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a9082c6d",
+   "id": "acf32bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2922,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8893d3d9",
+   "id": "68efdf2d",
    "metadata": {},
    "outputs": [
     {
@@ -3141,7 +3192,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "30c6b9cd",
+   "id": "e48a57f2",
    "metadata": {},
    "outputs": [
     {
@@ -3367,7 +3418,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fa4c3526",
+   "id": "c45b19e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3381,7 +3432,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1bfb9372",
+   "id": "54e9f764",
    "metadata": {},
    "outputs": [
     {
@@ -3476,7 +3527,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e90e5ff5",
+   "id": "626832b3",
    "metadata": {
     "scrolled": true
    },
@@ -3507,7 +3558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3adde7c2",
+   "id": "a71fb3d0",
    "metadata": {},
    "source": [
     "#### DATA SET 3: Land Under Cereal Production\n",
@@ -3518,7 +3569,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5ed14b73",
+   "id": "24e2ee79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3529,7 +3580,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "70b319c4",
+   "id": "c7b3426e",
    "metadata": {},
    "outputs": [
     {
@@ -3754,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6ab1b685",
+   "id": "1a33c2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3772,7 +3823,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d437b8bf",
+   "id": "322dc4e2",
    "metadata": {},
    "outputs": [
     {
@@ -3998,7 +4049,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "24ed2e18",
+   "id": "6fe2d49b",
    "metadata": {},
    "outputs": [
     {
@@ -4224,7 +4275,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8f1a98a2",
+   "id": "f06a698b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4238,7 +4289,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2e12e184",
+   "id": "6ed0a988",
    "metadata": {},
    "outputs": [
     {
@@ -4333,7 +4384,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "802638aa",
+   "id": "3c3b8474",
    "metadata": {},
    "outputs": [
     {
@@ -4362,7 +4413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69d9647",
+   "id": "48d0a15a",
    "metadata": {},
    "source": [
     "### Merging Data Set 1, Data Set 2 & Data Set 3 to one Data set(World Data on Arable Production of Cereals)"
@@ -4371,7 +4422,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fa42045f",
+   "id": "a4e0bf35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4386,7 +4437,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f541d2fe",
+   "id": "fa46a8e5",
    "metadata": {},
    "outputs": [
     {
@@ -4579,7 +4630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed09c46",
+   "id": "b4193991",
    "metadata": {},
    "outputs": [],
    "source": []
